--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
                     <li><a href="#">Terms</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
-                <span>© Copyright 2020 Original Trombones</span>
+                <span>&copy; Copyright <script>
+                        document.write(new Date().getFullYear())
+                    </script> Original Trombones</span>
                 <span>Powered by ViaxCo</span>
             </footer>
 
